fixed the gap between icon and text and increasing the width of the list item while

--- a/frontend/src/layout/Sidebar/index.module.css
+++ b/frontend/src/layout/Sidebar/index.module.css
@@ -46,8 +46,10 @@
   display: flex !important;
   align-items: center !important;
   justify-content: center !important;
+  gap: 5px !important;
 }
 .listItemText{
   display: flex;
   align-items: center;
+  white-space: nowrap;
 }
